--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -1,13 +1,19 @@
 <div class="content">
     <div class="container-fluid">
+
+        <div class="row">
+            <material-fab raised data-toggle="modal" data-target="#allModals" (click)="createApplication()"><glyph icon="add" ></glyph></material-fab>
+            <material-fab raised (click)="forceRefresh()"><glyph icon="refresh" ></glyph></material-fab>
+        </div>
         <div class="row">
             <material-radio-group>
                 <material-radio *ngFor="let filter of allPlatformsFilters" [checked]="filter == currentSelectedPlatform" (click)="selectFilter(filter)">{{filter}} </material-radio>
             </material-radio-group>
         </div>
         <div class="tim row">
-            <h2>Favorites</h2>
-            <div class="row">
+            <material-button (click)="isFavoritesExpanded=!isFavoritesExpanded"><h2>Favorites <i *ngIf="isFavoritesExpanded" class="material-icons">keyboard_arrow_up</i>
+                <i *ngIf="!isFavoritesExpanded" class="material-icons">keyboard_arrow_down</i></h2></material-button>
+            <div *ngIf="isFavoritesExpanded" class="row">
                 <!-- [routerLink]="['Versions', {appid: app.uuid}]" -->
                 <div  *ngFor="let app of favoritesFilteredApplications"  class="col-lg-4 col-md-6 col-sm-6">
                     <a (click)="selectApplication(app.uuid)"><div class="mdt-card mdt-card-stats">
@@ -28,8 +34,9 @@
             </div>
         </div>
         <div class="tim row">
-            <h2>Other</h2>
-            <div class="row">
+            <material-button (click)="isOthersAppExpanded=!isOthersAppExpanded"><h2>Other <i *ngIf="isOthersAppExpanded" class="material-icons">keyboard_arrow_up</i>
+                <i *ngIf="!isOthersAppExpanded" class="material-icons">keyboard_arrow_down</i></h2></material-button>
+            <div *ngIf="isOthersAppExpanded" class="row">
                 <div  *ngFor="let app of allFilteredApplications" class="col-lg-4 col-md-6 col-sm-6">
                     <a href="javascript:void(0)" (click)="selectApplication(app.uuid)"><div class="mdt-card mdt-card-stats">
                         <div class="mdt-card-header" data-background-color="purple">
